Update backend to use PRDs instead of the default TODO
